[gd_scene load_steps=15 format=2]

[ext_resource path="res://scene/choix_joueur.gd" type="Script" id=1]
[ext_resource path="res://image/back_ground.png" type="Texture" id=2]
[ext_resource path="res://image/perso1_visage_oui.png" type="Texture" id=3]
[ext_resource path="res://image/perso1_visage_non.png" type="Texture" id=4]
[ext_resource path="res://image/perso2_visage_non.png" type="Texture" id=5]
[ext_resource path="res://image/perso2_visage_oui.png" type="Texture" id=6]
[ext_resource path="res://scene/perso1.tscn" type="PackedScene" id=7]
[ext_resource path="res://scene/perso2.tscn" type="PackedScene" id=8]
[ext_resource path="res://scene/perso3.tscn" type="PackedScene" id=9]
[ext_resource path="res://image/curcer_choix.png" type="Texture" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "choix_oui_1",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "choix_non_1",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "choix_non_2",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "choix_oui_2",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "choix_oui_3",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "choix_non_3",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="back_ground" type="Sprite" parent="."]
position = Vector2( 520, 301.5 )
scale = Vector2( 1.74194, 4.00649 )
texture = ExtResource( 2 )

[node name="perso_1_visage" type="AnimatedSprite" parent="."]
position = Vector2( 160, 350 )
frames = SubResource( 1 )
animation = "choix_non_1"

[node name="perso_2_visage" type="AnimatedSprite" parent="."]
position = Vector2( 50, 350 )
frames = SubResource( 2 )
animation = "choix_non_2"

[node name="perso_3_visage" type="AnimatedSprite" parent="."]
position = Vector2( 270, 350 )
frames = SubResource( 3 )
animation = "choix_non_3"

[node name="perso_3" parent="." instance=ExtResource( 7 )]
position = Vector2( 480, 150 )
scale = Vector2( 2, 2.5 )

[node name="perso_1" parent="." instance=ExtResource( 8 )]
position = Vector2( 480, 150 )
scale = Vector2( 2, 2.5 )

[node name="perso_2" parent="." instance=ExtResource( 9 )]
position = Vector2( 480, 150 )
scale = Vector2( 2, 2.5 )

[node name="curseur" type="Sprite" parent="."]
position = Vector2( 50, 350 )
texture = ExtResource( 10 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 480, 300 )
scale = Vector2( 13.9615, 1 )
shape = SubResource( 4 )
